integration_tests/codegen_fail/fail/enum/derive_no_fields.rs
#[derive(juniper::GraphQLEnum)]
pub enum Test {}

fn main() { }
