integration_tests/codegen_fail/fail/enum/derive_no_fields.stderr
error: GraphQL enum expects at least one field

  = note: https://spec.graphql.org/June2018/#sec-Enums

 --> fail/enum/derive_no_fields.rs:2:1
  |
2 | pub enum Test {}
  | ^^^
